# promoternet

./: .gitignore  README.md  pyproject.toml  saliency_out.txt  saliency_out2.txt  saliency_out3.txt
notebooks/: 01_walkthrough.ipynb
reports/: baselines_results.json  cnn_results.json  neobe_selectivity_memo.md  nt_results.json  results_table.md  saliency_summary.json
scripts/: download_data.py  make_figures.py  process_urtecho.py  run_baselines.py  saliency_analysis.py  train_cnn.py  train_dnabert.py
src/promoternet/: __init__.py  data.py  eval.py  features.py  interpret.py  models.py  nt_model.py  train.py
tests/: test_data.py  test_features.py  test_nt_kmer.py
