[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promoternet"
version = "0.1.0"
description = "Bacterial promoter strength prediction with PWM, XGBoost, CNN, and DNABERT-2."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Kirill Puchkov" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "pyarrow>=15",
    "biopython>=1.83",
    "logomaker>=0.8",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "requests>=2.31",
    "torch>=2.2",
    "transformers>=4.40",
    "accelerate>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "jupyterlab>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=promoternet --cov-report=term-missing"
